Updated professional info

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,34 +49,33 @@
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Springfield Nuclear Power Plant</h3>
-          <h4 class="resume-item-details" itemprop="description">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
-          <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
+          <h3 class="resume-item-title" itemprop="name">Inspirata</h3>
+          <h4 class="resume-item-details" itemprop="description">Research Software Engineer &bull; May, 2015 &mdash; Present</h4>
+          <p class="resume-item-copy">I'm a backend Software Engineer working with a team of Algorithm Scientists. My work has largely focused on building, maintaining, and operating an database for images and associated image data.</p>
           <ul class="resume-item-list">
-            <li>Ate lots of donuts</li>
-            <li>Fell asleep rarely</li>
-            <li>Left promptly at end of day (sometimes earlier)</li>
+            <li>Constructed an image and metadata server.</li>
+            <li>Oversaw ingestion, security, and pre-processing of research data.</li>
+            <li>Developed image analysis algorithms to detect cancer.</li>
           </ul>
-          <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
+          <p class="resume-item-copy"></p>
 
         </div><!-- end of resume-item -->
+<!--
 
-        <!-- another resume item -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
           <h4 class="resume-item-details" itemprop="description">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
           <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
 
-        </div><!-- end of resume-item -->
+        </div>
 
-        <!-- by now you're getting the picture... -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">Simpson Lazer Tag</h3>
           <h4 class="resume-item-details" itemprop="description">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
           <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
 
-        </div><!-- end of resume-item -->
-
+        </div>
+  -->
       </section>
       <!-- end Experience -->
       {% endif %}
@@ -90,9 +89,9 @@
         </header>
 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Springfield College</h3>
-          <h4 class="resume-item-details" itemprop="description">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <h3 class="resume-item-title" itemprop="name">New College of Florida</h3>
+          <h4 class="resume-item-details" itemprop="description">Bachelors Degree with Honors, Physics &bull; 2011 &mdash; 2015</h4>
+          <p class="resume-item-copy">I wrote a thesis on an emergent effect observed in the Raman spectra of Silicon across the edge. Part of my thesis also included a mathematical model constructed in Python.</p>
         </div>
 
       </section>
@@ -132,18 +131,18 @@
         </header>
 
         <div class="resume-item">
-          <h4 class="resume-item-details">Donut design</h4>
-          <p class="resume-item-copy">Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research</p>
+          <h4 class="resume-item-details">Languages (Most Familiar First)</h4>
+          <p class="resume-item-copy">Python, MATLAB, LaTeX, C++, Ruby, R, C#, Fortran, Java</p>
         </div>
 
         <div class="resume-item">
-          <h4 class="resume-item-details">Craft beer brewing</h4>
-          <p class="resume-item-copy">Hops inspection, brew testing, distribution management, bottle label design, festival and event management</p>
+          <h4 class="resume-item-details">Software</h4>
+          <p class="resume-item-copy">MongoDB, Git, OrangeCanvas, MATLAB, Visual Studio (2013), Fog, LabView, SketchUp</p>
         </div>
 
         <div class="resume-item">
-          <h4 class="resume-item-details">Family leadership</h4>
-          <p class="resume-item-copy">Bread winning, conflict resolution, couch inspection, TV longevity testing</p>
+          <h4 class="resume-item-details">Systems Design</h4>
+          <p class="resume-item-copy">Agile, Data Modeling, Test-Driven Development</p>
         </div>
 
       </section>
