Updated info and opened everything in Windows.

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>
+          <p>I like to solve problems (easy and hard), and I like to use mathematics to do it. I build databases and data models, high-performance generic image processing programs, and (occasionally) pretty pictures.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
