Removed unused elements.

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>I like to solve problems (easy and hard), and I like to use mathematics to do it. I build databases and data models, high-performance generic image processing programs, and (occasionally) pretty pictures.</p>
+          <p>I like to solve problems, and I like to use mathematics to do it. I build databases and data models, high-performance generic image processing programs, and (occasionally) pretty pictures.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -91,7 +91,7 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name">New College of Florida</h3>
           <h4 class="resume-item-details" itemprop="description">Bachelors Degree with Honors, Physics &bull; 2011 &mdash; 2015</h4>
-          <p class="resume-item-copy">I wrote a thesis on an emergent effect observed in the Raman spectra of Silicon across the edge. Part of my thesis also included a mathematical model constructed in Python.</p>
+          <p class="resume-item-copy">I wrote a thesis on an emergent effect observed in the Raman spectra of Silicon across the edge. Part of my thesis also included a suite mathematical models constructed mostly in Python.</p>
         </div>
 
       </section>
@@ -112,12 +112,6 @@
           <p class="resume-item-copy">Donut Locator is an open source node/ember app that lets users find donuts within a defined radius from their home.</p>
         </div>
 
-        <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Donut Eater's User Group</h3>
-          <h4 class="resume-item-details">Co-Founder & Organizer &bull; 2007 &mdash; Present</h4>
-          <p class="resume-item-copy">DEUG is a local monthly meetup in Springfield where we share all the latest tips and tricks for dat donut lifestyle. I organize the group, and typically eat most of the donuts.</p>
-        </div>
-
       </section>
       <!-- end Projects -->
       {% endif %}
@@ -131,13 +125,13 @@
         </header>
 
         <div class="resume-item">
-          <h4 class="resume-item-details">Languages (Most Familiar First)</h4>
-          <p class="resume-item-copy">Python, MATLAB, LaTeX, C++, Ruby, R, C#, Fortran, Java</p>
+          <h4 class="resume-item-details">Languages</h4>
+          <p class="resume-item-copy">Python, MATLAB, LaTeX, C++, Ruby, R, C#, Fortran, Java, C</p>
         </div>
 
         <div class="resume-item">
           <h4 class="resume-item-details">Software</h4>
-          <p class="resume-item-copy">MongoDB, Git, OrangeCanvas, MATLAB, Visual Studio (2013), Fog, LabView, SketchUp</p>
+          <p class="resume-item-copy">MongoDB, Git, OrangeCanvas, MATLAB, Mathematica, Visual Studio (2013), Fog, LabView, SketchUp</p>
         </div>
 
         <div class="resume-item">
@@ -163,18 +157,6 @@
           <p class="resume-item-copy">Awarded for stopping a nuclear meltdown, even though I also started it.</p>
         </div>
 
-        <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">Duff Beer Customer of the year</h3>
-          <h4 class="resume-item-details">1997 &mdash; 2001, 2003, 2008 &mdash; 2012</h4>
-          <p class="resume-item-copy">Honored by <a href="https://en.wikipedia.org/wiki/Duff_Beer">Duff Beer</a> for being an outstanding customer several years straight. Qualifications included most beer consumed at a bar, most beer purchased, and most beer ralphed.</p>
-        </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">Moe's Patron of the Month</h3>
-          <h4 class="resume-item-details">12/2001, 8/2004</h4>
-          <p class="resume-item-copy">Specifically this prestigious awarded twice for stopping a robber with my belly.</p>
-        </div>
-
       </section>
       <!-- end Recognition -->
       {% endif %}
@@ -191,12 +173,6 @@
           <h3 class="resume-item-title"><a href="http://beerfortheworld.com">Beer for the World</a></h3>
           <h4 class="resume-item-details">Volunteer &bull; 2008 &mdash; Present</h4>
           <p class="resume-item-copy">Organized fund drives and participated in fundraising events for the benefit of families in third world countries without proper access to malt beverages.</p>
-        </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Nuclear Workers Labor Union</h3>
-          <h4 class="resume-item-details">Member in Good Standin &bull; 1994 &mdash; Present</h4>
-          <p class="resume-item-copy">Founding member of the local nuclear workers labor union.</p>
         </div>
 
       </section>
