--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,14 @@
         {% if site.email %}
         <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link"><i class="fa fa-envelope-o"></i></a>
         {% endif %}
+        {% if site.resume_link %}
+        <a href="{{ site.resume_link }}" class="waves-effect waves-teal btn-flat my-resume-link"><i class="fa fa-file-pdf-o"></i></a>
+        {% endif %}
         {% if site.github_username %}
         <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-github-link"><i class="fa fa-github"></i></a>
+        {% endif %}
+        {% if site.linkedin_username %}
+        <a href="https://linkedin.com/in/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-linkedin-link"><i class="fa fa-linkedin"></i></a>
         {% endif %}
         {% if site.twitter_username %}
         <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal btn-flat my-twitter-link"><i class="fa fa-twitter"></i></a>
