--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h2 class="my-mini-heading" itemprop="name headline">{{ page.title }}<br>
     <span class="my-mini-heading-sub">
     <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-      {{ page.date | date: "%b %-d, %Y" }}
+      {{ page.date | date: "%-d %b %Y" }}
     </time>
     </span></h2>
 
