--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,6 @@
 </script>
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="/images/favicon.png">
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 
 </head>
