Added padding and google analytics

--- a/assets/main.css
+++ b/assets/main.css
@@ -8,6 +8,7 @@ body {
   display: -webkit-box;
   -webkit-box-align: center;
   font-family: 'Frank Ruhl Libre', sans-serif;
+  padding-bottom: 2em;
 }
 
 /* ----------
