--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
 
     <div class="row content-wrapper post-wrapper">
       <section class="post-header">
-        <p class="post-date">{{ page.date }}</p>
+        <p class="post-date">{{ page.date }}<br>{{ page.location }}</p>
       </section>
       <h2 class="post-title">{{ page.title }}</h1>
       <article class="post-content">
