Fixed github link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
 
     {{ if site.github_username }}
     <li class="my-links-item">
-      <a href="https://github.com/github_username" class="waves-effect waves-teal my-link github"><i class="fa fa-github"></i></a>
+      <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal my-link github"><i class="fa fa-github"></i></a>
     </li>
     {{ endif }}
 
