Updated fonts for posts to use Frank Ruhl Libre for the body, but a monospace for the stamp.

--- a/assets/main.css
+++ b/assets/main.css
@@ -66,11 +66,14 @@ Typography
   padding-right: 1em;
   text-align: left;
 }
+.post-stamp {
+  font-family: "Oxygen Mono", monospace;
+}
 .post-wrapper {
-  font-family: 'Inconsolata', monospace;
+  font-family: "Frank Ruhl Libre", sans-serif;
 }
 .post-title {
-  font-family: 'Frank Ruhl Libre', sans-serif;
+  font-family: "Frank Ruhl Libre", serif, bold;
 }
 .bio-body {
   position: relative;
