--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width">
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:400,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:400,900|Oxygen+Mono" rel="stylesheet">
 
 <!-- CSS -->
 <link rel="stylesheet" href="/assets/main.css">
