Added the start of a proof post.

--- a/assets/main.css
+++ b/assets/main.css
@@ -10,7 +10,29 @@ body {
   font-family: 'Frank Ruhl Libre', sans-serif;
   padding-bottom: 2em;
 }
-
+/* ----------
+Fonts
+---------- */
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');
+}
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsx.otf');
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsi.otf');
+  font-style: italic, oblique;
+}
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunbxo.otf');
+  font-weight: bold;
+  font-style: italic, oblique;
+}
 /* ----------
 Links
 ---------- */
@@ -74,6 +96,14 @@ Typography
 }
 .post-title {
   font-family: "Frank Ruhl Libre", serif, bold;
+}
+.theorem-title {
+  font-family: "Computer Modern";
+  font-style: bold;
+}
+.theorem-text {
+  font-family: "Computer Modern";
+  font-style: italic;
 }
 .bio-body {
   position: relative;
