--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,31 +6,31 @@
   <ul class="my-links-list">
     {{ if site.email }}
     <li class="my-links-item">
-      <a href="mailto:{{ site.email }}" class="waves-effect waves-teal my-link envelope"><i class="fa fa-envelope-o"></i></a>
+      <a href="mailto:{{ site.email }}" class="waves-effect waves-teal my-link envelope"><i class="fas fa-envelope-square"></i></a>
     </li>
     {{ endif }}
 
     {{ if site.github_username }}
     <li class="my-links-item">
-      <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal my-link github"><i class="fa fa-github"></i></a>
+      <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal my-link github"><i class="fab fa-github"></i></a>
     </li>
     {{ endif }}
 
     {{ if site.resume_href }}
     <li class="my-links-item">
-      <a href="/{{ site.resume_href }}" class="waves-effect waves-teal my-link resume"><i class="fa fa-file-pdf-o"></i></a>
+      <a href="/{{ site.resume_href }}" class="waves-effect waves-teal my-link resume"><i class="far fa-file-pdf"></i></a>
     </li>
     {{ endif }}
 
     {{ if site.linkedin_username }}
     <li class="my-links-item">
-      <a href="https://linkedin.com/in/{{ site.linkedin_username }}" class="waves-effect waves-teal my-link linkedin"><i class="fa fa-linkedin"></i></a>
+      <a href="https://linkedin.com/in/{{ site.linkedin_username }}" class="waves-effect waves-teal my-link linkedin"><i class="fab fa-linkedin"></i></a>
     </li>
     {{ endif }}
 
     {{ if site.twitter_username }}
     <li class="my-links-item">
-      <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal my-link twitter"><i class="fa fa-twitter"></i></a>
+      <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal my-link twitter"><i class="fab fa-twitter"></i></a>
     </li>
     {{ endif }}
   </ul>
