--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,8 @@
 
 <!-- JS -->
 <script src="/assets/main.js"></script>
-<script src="https://use.fontawesome.com/a040f27264.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script defer src="/assets/fontawesome.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
@@ -36,7 +36,7 @@
            SVG: { linebreaks: { automatic: true } }
   });
 </script>
-<script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
 <!-- Google Analytics -->
 <script>
